docs: document virtual threads in backend concurrency model